--- a/VTrade_BE/.gitignore
+++ b/VTrade_BE/.gitignore
@@ -1,5 +1,38 @@
-.env
-*.pyc
+# Ignore Python cache and virtual environment files
 __pycache__/
-db.sqlite3
-VTrade_BE/venv
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.egg-info/
+*.egg
+*.db
+
+# Ignore local environment files
+.env
+.env.*
+
+# Ignore virtual environment directory
+venv/
+venv.bak/
+.envrc
+
+# Ignore Django migration files (optional)
+*/migrations/*.py
+!*/migrations/__init__.py
+
+# Ignore IDE/editor configuration files
+.pycharm/
+.idea/
+*.swp
+
+# Ignore logs
+*.log
+logs/
+
+# Ignore compiled or generated files
+*.mo
+*.pot
+
+# Ignore macOS system files (if using macOS)
+.DS_Store
