--- a/VTrade_BE/Dockerfile
+++ b/VTrade_BE/Dockerfile
@@ -2,17 +2,11 @@
 FROM python:3.11.5-slim-bullseye
 
 # Set environment variables
-ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Install dependencies required by Django and PostgreSQL
-RUN apt-get update && apt-get install -y \
-    netcat libpq-dev gcc && \
-    rm -rf /var/lib/apt/lists/*
-
 # Set work directory
-WORKDIR /code
+WORKDIR /app
 
 # Copy requirements file and install dependencies
 COPY ./requirements.txt .
@@ -21,11 +15,8 @@ RUN pip install -r requirements.txt
 # Copy the entire project into the container
 COPY . .
 
-# Ensure the entrypoint.sh script is executable
-RUN chmod +x /code/entrypoint.sh
-
-# Set the entrypoint
-ENTRYPOINT ["/code/entrypoint.sh"]
+EXPOSE 8000
 
 # Command to run your application
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+#letting docker comopse handle this
+#CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
