--- a/VTrade_BE/docker-compose.yml
+++ b/VTrade_BE/docker-compose.yml
@@ -2,43 +2,26 @@
 services:
   web:
     image: vtrade_stack_web:latest
-    entrypoint: ["/code/entrypoint.sh"]
     build:
-      context: VTrade_BE
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./VTrade_BE:/code
-    environment:
-      DB_NAME: vtrade
-      DB_USER: postgres
-      DB_PORT: 5432
-      DB_HOST: db
-    secrets:
-      - db_password
+      - .:/app
+    command: python manage.py runserver 0.0.0.0:8000
+    env_file:
+      - .env
     depends_on:
       - db
-    networks:
-      - vtrade-net
 
   db:
     image: postgres:latest
+    env_file:
+      - .env
     environment:
-      POSTGRES_DB: vtrade
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
-    secrets:
-      - db_password
+        POSTGRES_DB: ${DB_NAME}
+        POSTGRES_USER: ${DB_USER}
+        POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - "5433:5432"
-    networks:
-      - vtrade-net
-
-secrets:
-  db_password:
-    external: true
-
-networks:
-  vtrade-net:
-    driver: overlay
