--- a/VTrade_BE/requirements.txt
+++ b/VTrade_BE/requirements.txt
@@ -27,6 +27,7 @@ dataclasses-json==0.6.1
 decorator==5.1.1
 defusedxml==0.7.1
 Django==5.1.1
+djangorestframework==3.15.2
 django-allauth==65.0.2
 django-phonenumber-field==8.0.0
 docopt==0.6.2
