--- a/VTrade_BE/requirements.txt
+++ b/VTrade_BE/requirements.txt
@@ -1,170 +1,8 @@
-aiodns==3.1.1
-aiofile==3.8.8
-aiohttp==3.8.6
-aiosignal==1.3.1
-altair==5.1.2
-annotated-types==0.6.0
-anyio==3.7.1
-appnope==0.1.4
-arxiv==2.0.0
-asgiref==3.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.6.3
-cachetools==5.5.0
-caio==0.9.13
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-cryptography==43.0.1
-ctransformers==0.2.27
-dataclasses-json==0.6.1
-decorator==5.1.1
-defusedxml==0.7.1
 Django==5.1.1
+django_allauth==65.0.2
+django_phonenumber_field==8.0.0
 djangorestframework==3.15.2
-django-allauth==65.0.2
-django-phonenumber-field==8.0.0
-docopt==0.6.2
-executing==2.1.0
-faiss-cpu==1.7.4
-fastjsonschema==2.20.0
-feedparser==6.0.10
-filelock==3.12.4
-frozenlist==1.4.0
-fsspec==2023.9.2
-gitdb==4.0.10
-GitPython==3.1.40
-google-api-core==2.20.0
-google-api-python-client==2.147.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.65.0
-httplib2==0.22.0
-huggingface-hub==0.17.3
-idna==3.10
-importlib-metadata==6.8.0
-ipython==8.12.3
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-langchain==0.0.317
-langsmith==0.0.46
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-mysql-connector-python==8.1.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nc==1.0.2
-netcat==0.0.1a0
-networkx==3.2
-nltk==3.8.1
-numpy==1.26.1
-packaging==23.2
-pandas==2.1.1
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-phonenumbers==8.13.47
-pickleshare==0.7.5
-pillow==10.4.0
-pip-check-reqs==2.5.3
-pipreqs==0.5.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-proto-plus==1.24.0
-protobuf>=3.20.0,<4.21.13
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyarrow==13.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycares==4.4.0
-pycparser==2.22
-pydantic==2.4.2
-pydantic_core==2.10.1
-pydeck==0.8.1b0
-pygame==2.5.1
-Pygments==2.16.1
-PyJWT==2.9.0
-pyparsing==3.1.4
-PyPDF2==3.0.1
-python-dateutil==2.8.2
-python-decouple==3.8
-python-dotenv==1.0.1
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==26.2.0
-referencing==0.30.2
-regex==2023.10.3
-requests==2.31.0
-rich==13.6.0
-rpds-py==0.10.6
-rsa==4.9
-safetensors==0.4.0
-scikit-learn==1.3.1
-scipy==1.11.3
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-sgmllib3k==1.0.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.6
-SQLAlchemy==2.0.22
-sqlparse==0.5.1
-stack-data==0.6.3
-stream-chat==4.9.0
-streamlit==1.27.2
-streamlit-chat==0.1.1
-style==1.1.0
-sympy==1.12
-tenacity==8.2.3
-threadpoolctl==3.2.0
-tinycss2==1.4.0
-tokenizers==0.14.1
-toml==0.10.2
-toolz==0.12.0
-torch==2.1.0
-torchvision==0.16.0
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.14.3
-transformers==4.34.1
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.1
-update==0.0.1
-uritemplate==4.1.1
-urllib3==2.2.3
-validators==0.22.0
-wcwidth==0.2.13
-webencodings==0.5.1
-wget==3.2
-xmod==1.8.1
-yarg==0.1.9
-yarl==1.9.2
-zipp==3.17.0
+psycopg2-binary
+phonenumbers
+requests
+jwt
