--- a/VTrade_BE/requirements.txt
+++ b/VTrade_BE/requirements.txt
@@ -1,8 +1,8 @@
 Django==5.1.1
-django_allauth==65.0.2
-django_phonenumber_field==8.0.0
+django-allauth==65.0.2
+django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
 psycopg2-binary
 phonenumbers
 requests
-jwt
+PyJWT==1.7.1
