current working (i think) docker compose

--- a/VTrade_BE/Dockerfile
+++ b/VTrade_BE/Dockerfile
@@ -1,26 +1,31 @@
-# Pull base image
+# Use the base image
 FROM python:3.11.5-slim-bullseye
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+# Install system dependencies needed for cryptography, psycopg2, etc.
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    gcc \
+    libssl-dev \
+    libffi-dev \
+    netcat && \
+    apt-get clean
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y libpq-dev gcc netcat
+RUN pip install cryptography
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the requirements file and install Python dependencies
+# Copy requirements.txt to the working directory
 COPY requirements.txt .
-RUN pip install -r requirements.txt
 
-# Copy the entire project into the container
+# Install dependencies specified in requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application files
 COPY . .
 
+# Expose the port and set entrypoint
 EXPOSE 8000
-
 COPY ./entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
-
 ENTRYPOINT ["/entrypoint.sh"]
