--- a/VTrade_BE/requirements.txt
+++ b/VTrade_BE/requirements.txt
@@ -1,8 +1,9 @@
+cryptography==43.0.1
 Django==5.1.1
 django-allauth==65.0.2
 django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
-psycopg2-binary
-phonenumbers
-requests
-PyJWT==1.7.1
+psycopg2-binary==2.9.6
+phonenumberslite==8.13.15
+requests==2.31.0
+PyJWT==2.6.0
