--- a/VTrade_BE/docker-compose.yml
+++ b/VTrade_BE/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: python manage.py runserver 0.0.0.0:8000
     env_file:
       - .env
     depends_on:
